--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
   </head>
   <body>
     <div class="header">
-      <img id="pfp" src="assets/images/Joe.jpg" width="50%" />
+      <img id="pfp" src="assets/images/Joe.jpg" width =50% />
 
 
-      <h1>Joseph Kernozek</h1>
+      
      
     </div>
+    <h1>Joseph Kernozek</h1>
      <hr id="break" />
     <div id="bio">
       <p id="intro">
